--- a/.github/workflows/nuxt-deploy.yml
+++ b/.github/workflows/nuxt-deploy.yml
@@ -23,15 +23,15 @@ jobs:
       - name: Build
         run: NUXT_APP_BASE_URL=/${{ github.event.repository.name }} npm run generate
         env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} ||AIzaSyDUMBIkRVDVecRKXcb72s0NNUaLcIJNKGQ
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }} || https://gsbvayifmvdojiqobkcz.supabase.co
-          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }} || eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdzYnZheWlmbXZkb2ppcW9ia2N6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDM0ODQ3ODYsImV4cCI6MjA1OTA2MDc4Nn0.GoBHALk4Ka4P66oYyymnhiBXlz1OYt0gyiQSsUycvAw
+          GEMINI_API_KEY: AIzaSyDUMBIkRVDVecRKXcb72s0NNUaLcIJNKGQ
+          SUPABASE_URL: https://gsbvayifmvdojiqobkcz.supabase.co
+          SUPABASE_KEY: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdzYnZheWlmbXZkb2ppcW9ia2N6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDM0ODQ3ODYsImV4cCI6MjA1OTA2MDc4Nn0.GoBHALk4Ka4P66oYyymnhiBXlz1OYt0gyiQSsUycvAw
           
       - name: Create .nojekyll file
         run: touch .output/public/.nojekyll
         
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.5
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: .output/public
