--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@nuxtjs/supabase": "^1.5.0",
     "@tailwindcss/vite": "^4.0.17",
     "@unhead/vue": "^2.0.2",
+    "markdown-it": "^14.1.0",
     "nuxt": "^3.16.1",
     "reka-ui": "^2.1.1",
     "tailwindcss": "^4.0.17",
     "typescript": "^5.8.2",
     "vue": "^3.5.13",
+    "vue-markdown-render": "^2.2.1",
     "vue-router": "^4.5.0"
   }
 }
