Add Supabase configuration and setup guide; update diary_entries schema and RLS policies

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@nuxtjs/supabase": "^1.5.0",
     "@tailwindcss/vite": "^4.0.17",
     "@unhead/vue": "^2.0.2",
+    "dompurify": "^3.2.5",
     "markdown-it": "^14.1.0",
+    "marked": "^15.0.7",
     "nuxt": "^3.16.1",
     "reka-ui": "^2.1.1",
     "tailwindcss": "^4.0.17",
